2006-04-14  Adam Jackson  <ajax@freedesktop.org>

	* mi/micmap.c:
	Coverity #806: Another memory leak on OOM path.

2006-04-14  Adam Jackson  <ajax@freedesktop.org>

	* hw/xfree86/common/xf86Helper.c:
	Coverity #847, #848, #849: Three more memory leaks.

2006-04-14  Adam Jackson  <ajax@freedesktop.org>

	* hw/dmx/input/dmxcommon.c:
	Coverity #1003, #1004: Two more useless null checks.

2006-04-14  Adam Jackson  <ajax@freedesktop.org>

	* hw/dmx/input/dmxconsole.c:
	Coverity #1005: Avoid a null deref.

2006-04-14  Adam Jackson  <ajax@freedesktop.org>

	* hw/dmx/input/dmxinputinit.c:
	Coverity #1007: Fix a silly null check.

2006-04-14  Adam Jackson  <ajax@freedesktop.org>

	* hw/xfree86/os-support/Makefile.am:
	Bug #6580: Don't install xf86drm.h, that's libdrm's job.

Mon Apr 10 11:00:46 2006  Søren Sandmann  <sandmann@redhat.com>

	* composite/compext.c (ProcCompositeReleaseOverlayWindow): Use
	FreeResource() instead of deleteCompOverlayClient().

2006-04-07  Aaron Plattner  <aplattner@nvidia.com>

	* hw/xfree86/common/xf86Module.h:
	Bump the ABI versions.  Due to Glyph privates and the XV update below,
	the video driver ABI needs to be bumped to 1.0.  The rest of the ABI
	minor versions were bumped to include the LoaderGetABIVersion
	function.
	* hw/xfree86/common/xf86xv.c: (xf86XVRegetVideo),
	(xf86XVReputVideo), (xf86XVReputImage), (xf86XVPutStill),
	(xf86XVGetStill), (xf86XVPutImage):
	* hw/xfree86/common/xf86xv.h:
	Add a DrawblePtr argument to the XV hooks.  This allows drivers to
	determine that the target window is redirected and draw to the
	appropriate place.

2006-04-07  Adam Jackson  <ajax@freedesktop.org>

	* hw/xfree86/common/xisb.c:
	* hw/xfree86/common/xisb.h:
	Remove libc wrapper types from Xisb interfaces.

2006-04-06  Adam Jackson  <ajax@freedesktop.org>

	* hw/xfree86/parser/Monitor.c:
	Coverity #488: Avoid smashing an array on malformed config 
	files.

2006-04-06  Adam Jackson  <ajax@freedesktop.org>

	* hw/dmx/glxProxy/glxsingle.c: